--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "MS STORE - Premium Shop",
   "short_name": "MS STORE",
-  "description": "SportX Premium Store - Elevate Your Game",
+  "description": "Best Sports Shop in Bangladesh",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#0f172a",
@@ -9,17 +9,16 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "https://img.icons8.com/fluency/192/000000/shopping-bag.png",
+      "src": "https://i.postimg.cc/cCkXGkPH/FB-IMG-1770094555781.jpg",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "image/jpeg",
       "purpose": "any maskable"
     },
     {
-      "src": "https://img.icons8.com/fluency/512/000000/shopping-bag.png",
+      "src": "https://i.postimg.cc/cCkXGkPH/FB-IMG-1770094555781.jpg",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/jpeg",
       "purpose": "any maskable"
     }
   ]
 }
-
