--- a/admin_manifest.json
+++ b/admin_manifest.json
@@ -1,16 +1,20 @@
 {
-  "name": "MS Admin Panel",
-  "short_name": "Admin MS",
-  "start_url": "admin_login.html",
+  "name": "MS Admin Dashboard",
+  "short_name": "MS-Admin",
+  "start_url": "admin_dashboard.html",
   "display": "standalone",
-  "background_color": "#001a2c",
+  "background_color": "#0f172a",
   "theme_color": "#00d2ff",
   "icons": [
     {
-      "src": "https://img.icons8.com/fluency/144/shield-lock.png", 
+      "src": "https://img.icons8.com/fluency/144/shield-lock.png",
       "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "https://img.icons8.com/fluency/512/shield-lock.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
 }
-
