--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "MS STORE",
   "short_name": "MS Store",
-  "start_url": "/shop.html", 
+  "start_url": "/shop.html",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#f4f7fa",
   "theme_color": "#2563eb",
   "icons": [
     {
