--- a/manifest.json
+++ b/manifest.json
@@ -7,13 +7,13 @@
   "theme_color": "#001a2c",
   "icons": [
     {
-      "src": "https://i.postimg.cc/cCkXGkPH/FB-IMG-1770094555781.jpg",
+      "src": "https://i.postimg.cc/rwR0pgVs/1771167225635-removebg-preview.png",
       "sizes": "512x512",
       "type": "image/jpeg",
       "purpose": "any"
     },
     {
-      "src": "https://i.postimg.cc/cCkXGkPH/FB-IMG-1770094555781.jpg",
+      "src": "https://i.postimg.cc/rwR0pgVs/1771167225635-removebg-preview.png",
       "sizes": "512x512",
       "type": "image/jpeg",
       "purpose": "maskable"
