--- a/manifest.json
+++ b/manifest.json
@@ -9,13 +9,13 @@
     {
       "src": "https://i.postimg.cc/rwR0pgVs/1771167225635-removebg-preview.png",
       "sizes": "512x512",
-      "type": "image/jpeg",
+      "type": "image/png",
       "purpose": "any"
     },
     {
       "src": "https://i.postimg.cc/rwR0pgVs/1771167225635-removebg-preview.png",
       "sizes": "512x512",
-      "type": "image/jpeg",
+      "type": "image/png",
       "purpose": "maskable"
     }
   ]
