--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
   "name": "MS STORE",
   "short_name": "MS Store",
-  "start_url": "/index.html",
+  "start_url": "index.html",
   "display": "standalone",
   "background_color": "#001a2c",
   "theme_color": "#001a2c",
+  "scope": "./",
   "icons": [
     {
       "src": "https://i.postimg.cc/rwR0pgVs/1771167225635-removebg-preview.png",
